--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -568,6 +568,34 @@
 								</li>
 							</ul>
 
+							<ul class="uk-list-partners uk-child-width-1-3@s uk-child-width-1-4@m uk-grid" data-uk-grid>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-partner uk-card-partner-2">
+										<img src="%=static=%img/content/partner-logo-1.png" alt="partner">
+									</a>
+								</li>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-partner uk-card-partner-2">
+										<img src="%=static=%img/content/partner-logo-2.png" alt="partner">
+									</a>
+								</li>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-partner uk-card-partner-2">
+										<img src="%=static=%img/content/partner-logo-3.png" alt="partner">
+									</a>
+								</li>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-partner uk-card-partner-2">
+										<img src="%=static=%img/content/partner-logo-4.png" alt="partner">
+									</a>
+								</li>
+								<li class="uk-list-item">
+									<a href="#" class="uk-card-partner uk-card-partner-2">
+										<img src="%=static=%img/content/partner-logo-5.png" alt="partner">
+									</a>
+								</li>
+							</ul>
+
 							<section class="uk-section-contacts uk-section">
 								<h2 class="uk-salon-address">ул. Академика Павлова, 323</h2>
 								<a href="#" class="uk-link">Посмотреть фото и расположение на карте</a>
@@ -824,6 +852,127 @@
 								<h2 class="uk-margin-medium-bottom">Однако ещё большее восхищение вызвала подвеска</h2>
 								<p>На конкурс Renault представили свои работы студенты столичных вузов. С конкурсантами работал вице-президент дизайнерских программ группы Renault Энтони Грейд и его коллеги из Renault Design, которые провели мастер-классы, в том числе и по цифровому рисунку, с участием дизайнеров Эрде Тунга и Андрея Басманова. Результаты своей работы команды.</p>
 							</article>
+
+							<ul class="uk-list-souvenirs uk-grid uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-grid-match" data-uk-grid>
+								<li class="uk-list-item">
+									<div class="uk-card-souvenir uk-text-center">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/souvenir-img-1.jpg" alt="">
+										</div>
+										<div class="uk-card-body">
+											<span class="uk-souvenir-brand">Renault</span>
+											<h6 class="uk-card-title">Декоративная автомобильная подушка Sandero Sptepway</h6>
+											<span class="uk-card-description">Материал: хлопковый велюр.<br> Размер: 35*35см.</span>
+										</div>
+									</div>
+								</li>
+								<li class="uk-list-item">
+									<div class="uk-card-souvenir uk-text-center">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/souvenir-img-2.jpg" alt="">
+										</div>
+										<div class="uk-card-body">
+											<span class="uk-souvenir-brand">Солли Плюс</span>
+											<h6 class="uk-card-title">Шариковая ручка</h6>
+											<span class="uk-card-description">Прозрачный пластиковый корпус. Синие чернила. Упаковка 12 штук.</span>
+										</div>
+									</div>
+								</li>
+								<li class="uk-list-item">
+									<div class="uk-card-souvenir uk-text-center">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/souvenir-img-3.jpg" alt="">
+										</div>
+										<div class="uk-card-body">
+											<span class="uk-souvenir-brand">Renault</span>
+											<h6 class="uk-card-title">Флэш-карта USB 16 ГБ</h6>
+											<span class="uk-card-description">Алюминий с матовой отделкой. Память: 16 Гб. Гарантия: 1 год.</span>
+										</div>
+									</div>
+								</li>
+								<li class="uk-list-item">
+									<div class="uk-card-souvenir uk-text-center">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/souvenir-img-4.jpg" alt="">
+										</div>
+										<div class="uk-card-body">
+											<span class="uk-souvenir-brand">Opel</span>
+											<h6 class="uk-card-title">Куртка мужская</h6>
+											<span class="uk-card-description">100% полиэстер. Застежка на молнию</span>
+										</div>
+									</div>
+								</li>
+								<li class="uk-list-item">
+									<div class="uk-card-souvenir uk-text-center">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/souvenir-img-5.jpg" alt="">
+										</div>
+										<div class="uk-card-body">
+											<span class="uk-souvenir-brand">Mercedes-Benz</span>
+											<h6 class="uk-card-title">Комплект махровых полотенец SPORT</h6>
+											<span class="uk-card-description">Цвет: желтый. Состав: 100% хлопок. Комплектация: 2 шт. Размер: 50х70 см; 70х130 см</span>
+										</div>
+									</div>
+								</li>
+								<li class="uk-list-item">
+									<div class="uk-card-souvenir uk-text-center">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/souvenir-img-6.jpg" alt="">
+										</div>
+										<div class="uk-card-body">
+											<span class="uk-souvenir-brand">Mitsubishi Motors</span>
+											<h6 class="uk-card-title">Зонт складной</h6>
+											<span class="uk-card-description">Полиэстер. 8 секторов. Открывается автоматически. Ручка из углерода, спицы из стекловолокна.</span>
+										</div>
+									</div>
+								</li>
+								<li class="uk-list-item">
+									<div class="uk-card-souvenir uk-text-center">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/souvenir-img-7.jpg" alt="">
+										</div>
+										<div class="uk-card-body">
+											<span class="uk-souvenir-brand">Renault</span>
+											<h6 class="uk-card-title">Мультифункциональные женские часы Renault Corporate</h6>
+											<span class="uk-card-description">Черная керамика. Кварцевый механизм, 2 стрелки. Минеральное стекло. 13 кристаллов Swarovski и 1 бриллиант диаметром 1 мм. Водонепроницаемые.</span>
+										</div>
+									</div>
+								</li>
+								<li class="uk-list-item">
+									<div class="uk-card-souvenir uk-text-center">
+										<div class="uk-card-img">
+											<img src="%=static=%img/content/souvenir-img-8.jpg" alt="">
+										</div>
+										<div class="uk-card-body">
+											<span class="uk-souvenir-brand">Opel</span>
+											<h6 class="uk-card-title">Ручка шариковая</h6>
+											<span class="uk-card-description">Материал: матовая латунь с глянцевым черным нажимом и наконечником. Вращающийся механизм.</span>
+										</div>
+									</div>
+								</li>
+							</ul>
+
+							<ul class="uk-list-success-storys uk-grid" data-uk-grid>
+								<li class="uk-item-list uk-grid" data-uk-grid>
+									<div class="uk-width-2-3@s">
+										<div class="uk-card-succes-story-1 uk-light">
+											<div class="uk-card-background">
+												<img src="%=static=%img/content/img-5.jpg" alt="">
+											</div>
+											<div class="uk-card-overlay"></div>
+											<div class="uk-card-foreground">
+												<h4 class="card-title">Если вы инициативны и мотивированы, в Солли Плюс вы найдете неограниченные возможности для карьерного роста</h4>
+												<div class="uk-card uk-card-person-3">
+													<div class="uk-card-body">
+														<div class="uk-card-person-name">Пучков Олег Алексеевич</div>
+														<div class="uk-card-person-position">Генеральный директор холдинга Солли Плюс</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+							</ul>
 						</div>	
 					</div>
         </div>
