--- a/markup/pages/components.html
+++ b/markup/pages/components.html
@@ -952,27 +952,185 @@
 								</li>
 							</ul>
 
-							<ul class="uk-list-success-storys uk-grid" data-uk-grid>
+							<ul class="uk-list-success-storys uk-grid uk-grid-match" data-uk-grid>
 								<li class="uk-item-list uk-grid" data-uk-grid>
 									<div class="uk-width-2-3@s">
 										<div class="uk-card-succes-story-1 uk-light">
 											<div class="uk-card-background">
 												<img src="%=static=%img/content/img-5.jpg" alt="">
 											</div>
-											<div class="uk-card-overlay"></div>
+											<div class="uk-card-overlay uk-background-13"></div>
 											<div class="uk-card-foreground">
-												<h4 class="card-title">Если вы инициативны и мотивированы, в Солли Плюс вы найдете неограниченные возможности для карьерного роста</h4>
+												<h4 class="uk-card-title"><span class="uk-title-decore">{{Icon iconName="circle-decore"}}</span>Если вы инициативны и мотивированы, в Солли Плюс вы найдете неограниченные возможности для карьерного роста</h4>
 												<div class="uk-card uk-card-person-3">
 													<div class="uk-card-body">
-														<div class="uk-card-person-name">Пучков Олег Алексеевич</div>
-														<div class="uk-card-person-position">Генеральный директор холдинга Солли Плюс</div>
+														<div class="uk-card-person-name">Анатолий Чуб</div>
+														<div class="uk-card-person-position">Руководитель отдела продаж Volkswagen Солли Плюс</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="uk-width-1-3@s">
+										<div class="uk-card-succes-story-2">
+											<h5 class="uk-card-title"><span class="uk-title-decore">{{Icon iconName="wave-decore"}}</span>В Солли Плюс очень позитивная и мотивирующая атмосфера, каждый относится к работе со всей ответственностью</h5>
+											<div class="uk-card uk-card-person-4">
+												<div class="uk-card-top">
+													<div class="uk-card-person-avatar">
+														<img src="/static/img/content/person-2.jpg" alt="">
+													</div>
+												</div>
+												<div class="uk-card-body">
+													<div class="uk-card-person-name">Ольга Ищук</div>
+													<div class="uk-card-person-position">Руководитель отдела кредитования и страхования</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="uk-item-list">
+									<div class="uk-card-succes-story-3 uk-border">
+										<h4 class="uk-card-title"><span class="uk-title-decore">{{Icon iconName="square-decore"}}</span>Если вы инициативны и мотивированы, в Солли Плюс вы найдете неограниченные возможности для карьерного роста</h4>
+										<div class="uk-card uk-card-person-3">
+											<div class="uk-card-top">
+												<div class="uk-card-person-avatar">
+													<img src="/static/img/content/person-3.jpg" alt="">
+												</div>
+											</div>
+											<div class="uk-card-body">
+												<div class="uk-card-person-name">Анатолий Чуб</div>
+												<div class="uk-card-person-position">Руководитель отдела продаж Volkswagen Солли Плюс</div>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="uk-item-list uk-grid" data-uk-grid>
+									<div class="uk-width-1-3@s">
+										<div class="uk-card-succes-story-2">
+											<h5 class="uk-card-title"><span class="uk-title-decore">{{Icon iconName="triangle-decore"}}</span>В Солли Плюс очень позитивная и мотивирующая атмосфера, каждый относится к работе со всей ответственностью</h5>
+											<div class="uk-card uk-card-person-4">
+												<div class="uk-card-top">
+													<div class="uk-card-person-avatar">
+														<img src="/static/img/content/person-2.jpg" alt="">
+													</div>
+												</div>
+												<div class="uk-card-body">
+													<div class="uk-card-person-name">Ольга Ищук</div>
+													<div class="uk-card-person-position">Руководитель отдела кредитования и страхования</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="uk-width-2-3@s">
+										<div class="uk-card-succes-story-1 uk-light">
+											<div class="uk-card-background">
+												<img src="%=static=%img/content/img-5.jpg" alt="">
+											</div>
+											<div class="uk-card-overlay uk-background-15"></div>
+											<div class="uk-card-foreground">
+												<h4 class="uk-card-title"><span class="uk-title-decore">{{Icon iconName="dash-decore"}}</span>Если вы инициативны и мотивированы, в Солли Плюс вы найдете неограниченные возможности для карьерного роста</h4>
+												<div class="uk-card uk-card-person-3">
+													<div class="uk-card-body">
+														<div class="uk-card-person-name">Анатолий Чуб</div>
+														<div class="uk-card-person-position">Руководитель отдела продаж Volkswagen Солли Плюс</div>
 													</div>
 												</div>
 											</div>
 										</div>
 									</div>
 								</li>
+								<li class="uk-item-list">
+									<div class="uk-card-succes-story-3 uk-background-muted">
+										<h4 class="uk-card-title"><span class="uk-title-decore">{{Icon iconName="semicircle-decore"}}</span>Если вы инициативны и мотивированы, в Солли Плюс вы найдете неограниченные возможности для карьерного роста</h4>
+										<div class="uk-card uk-card-person-3">
+											<div class="uk-card-top">
+												<div class="uk-card-person-avatar">
+													<img src="/static/img/content/person-3.jpg" alt="">
+												</div>
+											</div>
+											<div class="uk-card-body">
+												<div class="uk-card-person-name">Анатолий Чуб</div>
+												<div class="uk-card-person-position">Руководитель отдела продаж Volkswagen Солли Плюс</div>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="uk-item-list uk-grid" data-uk-grid>
+									<div class="uk-width-2-3@s">
+										<div class="uk-card-succes-story-1">
+											<div class="uk-card-background">
+												<img src="%=static=%img/content/img-5.jpg" alt="">
+											</div>
+											<div class="uk-card-overlay uk-background-14"></div>
+											<div class="uk-card-foreground">
+												<h4 class="uk-card-title"><span class="uk-title-decore">{{Icon iconName="cross-decore"}}</span>Если вы инициативны и мотивированы, в Солли Плюс вы найдете неограниченные возможности для карьерного роста</h4>
+												<div class="uk-card uk-card-person-3">
+													<div class="uk-card-body">
+														<div class="uk-card-person-name">Анатолий Чуб</div>
+														<div class="uk-card-person-position">Руководитель отдела продаж Volkswagen Солли Плюс</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="uk-width-1-3@s">
+										<div class="uk-card-succes-story-2">
+											<h5 class="uk-card-title"><span class="uk-title-decore">{{Icon iconName="circle-s-decore"}}</span>В Солли Плюс очень позитивная и мотивирующая атмосфера, каждый относится к работе со всей ответственностью</h5>
+											<div class="uk-card uk-card-person-4">
+												<div class="uk-card-top">
+													<div class="uk-card-person-avatar">
+														<img src="/static/img/content/person-2.jpg" alt="">
+													</div>
+												</div>
+												<div class="uk-card-body">
+													<div class="uk-card-person-name">Ольга Ищук</div>
+													<div class="uk-card-person-position">Руководитель отдела кредитования и страхования</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
 							</ul>
+
+							<article class="uk-article uk-article-succes-story">
+								<a href="#" class="uk-back">{{Icon iconName="arrow-left"}}Все истории успеха</a>
+								<h1 class="uk-margin-small-top">Если вы инициативны и мотивированы,	в Солли Плюс вы найдете неограниченные возможности для карьерного роста</h1>
+								<div class="uk-card uk-card-person-3">
+									<div class="uk-card-top">
+										<div class="uk-card-person-avatar">
+											<img src="/static/img/content/person-2.jpg" alt="">
+										</div>
+									</div>
+									<div class="uk-card-body">
+										<div class="uk-card-person-name">Ольга Ищук</div>
+										<div class="uk-card-person-position">Руководитель отдела кредитования и страхования</div>
+									</div>
+								</div>
+								<h4>Благодаря постоянному росту компании Солли Плюс, я смог за несколько лет пройти путь от торгового представителя областного филиала до руководителя оптовыми продажами всей компании по группе Renault.</h4>
+								<p>Моя карьера началась в 2014 году в Запорожском филиале компании КТ с должности торгового представителя розничных продаж. Здесь я нашел сферу, в которой мне интересно — продвижение монтажной пены торговой марки Soma Fix. Вскоре мне удалось успешно выстроить сотрудничество с Ключевыми Клиентами, и моя зона ответственности расширилась еще на две территории: Днепропетровск и Кривой Рог. Я стал региональным руководителем этих областей.</p>
+								<div class="uk-grid uk-flex-middle uk-margin-large" data-uk-grid="">
+									<div class="uk-width-2-5@m uk-first-column">
+										<img src="/static/img/content/article-img-1.jpg" alt="" class="uk-border-rounded">
+									</div>
+									<div class="uk-width-3-5@m">
+										<h5>На сегодняшний день нам удалось сформировать отдел по работе с Ключевыми Клиентами оптового направления на базе Киевского филиала.</h5>
+									</div>
+								</div>
+								<p>Несколько лет целеустремленной работы дали свои результаты — меня перевели в Центральный офис на должность руководителя оптовых продаж в отделе “Строительная химия”. На сегодняшний день нам удалось сформировать отдел по работе с Ключевыми Клиентами оптового направления на базе Киевского филиала.</p>
+								<p>КТ Украина хорошо понимает, что главный ресурс компании — это ее сотрудники. Во многом мне удалось добиться успеха благодаря обучающей корпоративной программе “Business Start”. По ее завершению, я и сам стал преподавателем в другой учебной программе — “Корпоративный Университет”. Ведь важно не только получать, но и уметь отдавать что-то взамен. Это демонстрируют не только преподаватели, но и компания по отношению к своим сотрудникам.</p>
+								<div class="uk-grid uk-flex-middle uk-margin-large" data-uk-grid="">
+									<div class="uk-width-3-5@m uk-first-column">
+										<h5>Желаю всем найти ту сферу деятельности, которая станет стимулом движения вперед. Важно научится действительно любить то, чем ты занимаешься, и тогда жизнь непременно наградит тебя успехом.</h5>
+									</div>
+									<div class="uk-width-2-5@m">
+										<img src="/static/img/content/article-img-1.jpg" alt="" class="uk-border-rounded">
+									</div>
+								</div>
+								<div class="uk-card-send-resume uk-text-center">
+									<h3 class="uk-card-title uk-margin-medium"><span class="uk-title-decore">{{Icon iconName="wave-decore"}}</span> Хотите присоедениться и добиться успеха вместе с нами?</h3>
+									<button class="uk-button uk-button-primary">Предложить свое резюме</button>
+								</div>
+							</article>
 						</div>	
 					</div>
         </div>
