--- a/builds/test.html
+++ b/builds/test.html
@@ -16,7 +16,7 @@
 
 
         <!--[if (gt IE 9)|!(IE)]><!-->
-        <link href="static/css/main48c4b.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/mainn5zha.min.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
 
         <meta property="og:title" content="" />
@@ -2929,7 +2929,7 @@
         </script>
 
         <!-- Main scripts. You can replace it, but I recommend you to leave it here     -->
-        <script src="static/js/main48c4b.min.js"></script>
+        <script src="static/js/mainn5zha.min.js"></script>
     </body>
 
 </html>
