--- a/markup/pages/home.html
+++ b/markup/pages/home.html
@@ -453,9 +453,9 @@
                                             <div class="uk-card-img">
                                                 <img src="%=static=%img/content/img-9.png" alt="car-1">
                                             </div>
-                                            <div class="uk-card-body">
+                                            <div class="uk-card-body uk-text-center">
                                                 <h6 class="uk-card-title">Новый Logan</h6>
-                                                <span>от 1 323 013 грн</span>
+                                                <span class="uk-text-primary">Уточнить цену</span>
                                             </div>
                                         </a>
                                     </div>
@@ -464,9 +464,9 @@
                                             <div class="uk-card-img">
                                                 <img src="%=static=%img/content/img-10.png" alt="car-1">
                                             </div>
-                                            <div class="uk-card-body">
+                                            <div class="uk-card-body uk-text-center">
                                                 <h6 class="uk-card-title">Новый Logan</h6>
-                                                <span>от 1 323 013 грн</span>
+                                                <span class="uk-text-primary">Уточнить цену</span>
                                             </div>
                                         </a>
                                     </div>
@@ -475,9 +475,9 @@
                                             <div class="uk-card-img">
                                                 <img src="%=static=%img/content/img-9.png" alt="car-1">
                                             </div>
-                                            <div class="uk-card-body">
+                                            <div class="uk-card-body uk-text-center">
                                                 <h6 class="uk-card-title">Новый Logan</h6>
-                                                <span>от 1 323 013 грн</span>
+                                                <span class="uk-text-primary">Уточнить цену</span>
                                             </div>
                                         </a>
                                     </div>
@@ -486,9 +486,9 @@
                                             <div class="uk-card-img">
                                                 <img src="%=static=%img/content/img-10.png" alt="car-1">
                                             </div>
-                                            <div class="uk-card-body">
+                                            <div class="uk-card-body uk-text-center">
                                                 <h6 class="uk-card-title">Новый Logan</h6>
-                                                <span>от 1 323 013 грн</span>
+                                                <span class="uk-text-primary">Уточнить цену</span>
                                             </div>
                                         </a>
                                     </div>
